--- a/css/main.css
+++ b/css/main.css
@@ -15,13 +15,20 @@ body {
   display: block;
 }
 
+.content-wrapper {
+  position: relative;
+  z-index: 3;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+
 section {
-  z-index: 1;
+  flex: 1;
   position: relative;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  min-height: 100vh;
   padding-top: 6vh;
   padding-left: 6vw;
 }
@@ -75,6 +82,7 @@ section {
   flex-direction: column;
   justify-content: flex-end;
   align-items: flex-end;
+  z-index: 4;
 }
 
 .footer > a {
@@ -89,6 +97,7 @@ section {
   flex-direction: column;
   justify-content: flex-end;
   align-items: flex-end;
+  z-index: 4;
 }
 
 .hero-footer > a {
